--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,8 +5,8 @@
   "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
 
   "remoteUser": "codespace",
-  "overrideCommand": false
-   ,
+  "overrideCommand": false,
+  
  // Add the IDs of extensions you want installed when the container is created.
  "customizations": {
      "vscode": {
@@ -20,4 +20,7 @@
          ]
      }
  }
+
+   ,
+ "postCreateCommand": "echo '# Writing code upon codespace creation!'  >> codespace.md"
 }
